tests/success/00-basics/List-Drop.vix
type list a = Nil | Cons a (ptr (list a))

map f (Ptr Nil) = Ptr Nil
map f (Ptr (Cons x xs)) = Ptr (Cons (f x) (map f xs))

drop 0 xs = xs
drop n (Ptr Nil) = Ptr Nil
drop n (Ptr (Cons _ xs)) = drop (subInt n 1) xs

enum 0 = Ptr Nil
enum n = Ptr (Cons n (enum (subInt n 1)))

test = map printInt (drop 5 (enum 10))
