tests/type-error/Patterns-TooManyArgs.vix
type List a = Nil | Cons a (Ptr (List a))

f (Cons x y z) = 0
f (Nil x) = 1
